--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -27,7 +27,7 @@
       <div class="col-6">
         <div class="float-right">
           <form #rfpchoiceform="ngForm">
-            <select class="form-control" (change)="rfptoggle(rfpchoiceform, createProp, createSaved)"
+            <select class="form-control" (ngModelChange)="rfptoggle(rfpchoiceform, createProp, createSaved)"
                     id="rfpsendselect"
                     name="rfpsendselect"
                     [ngModel]="dropdownreset">
