ready for launch

--- a/src/app/mainroot/browsevenues/venuelist/venuelist.component.html
+++ b/src/app/mainroot/browsevenues/venuelist/venuelist.component.html
@@ -1,40 +1,52 @@
 <div class="container">
-<div class="row pb-3" id="VenueList">
-  <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let card of venuelist; let i= index">
-    <div class="card-container">
-      <slideshow class="card-container-img"
-                 [showArrows]="true"
-                 [imageUrls]="card.venueimage_set"
-                 [height]="slideshowparams.height">
-
-      </slideshow>
-      <div class="venue-location col-12">
-        {{ card.searchneighborhood }}
+  <div *ngIf="filteredvenues.length < 1" class="row">
+    <div class="col-12">
+      <div class="text-center">
+        <h3>Oops, looks like you're a little too refined for us, maybe scale it back while we grow. </h3>
       </div>
-      <div (click)="navigatetovenue(i)" class="card-container-information">
-        <div class="venuename">
-          {{ card.name }}
+    </div>
+  </div>
+  <div class="row">
+    <div *ngIf="choicesload" class="spinner-container">
+      <div class="spinner"></div>
+    </div>
+  </div>
+  <div *ngIf="!choicesload" class="row pb-3" id="VenueList">
+    <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let card of venuelist; let i= index">
+      <div class="card-container">
+        <slideshow class="card-container-img"
+                   [showArrows]="true"
+                   [imageUrls]="card.venueimage_set"
+                   [height]="slideshowparams.height">
+
+        </slideshow>
+        <div class="venue-location col-12">
+          {{ card.searchneighborhood }}
         </div>
-        <div>
-          <div *ngIf="card.cuisine1 != null">
-            <span>{{card.cuisine1}}</span>
-            <span *ngIf="card.cuisine2 != null"> | {{ card.cuisine2 }}</span>
+        <div (click)="navigatetovenue(i)" class="card-container-information">
+          <div class="venuename">
+            {{ card.name }}
           </div>
           <div>
-            <span *ngIf="card.experientialtype != null">{{ card.experientialtype }} | </span>
-            <span>
-              <span *ngIf="card.pricerating == 1">$ 30 and under</span>
-              <span *ngIf="card.pricerating == 2">$ 31 to $ 50</span>
-              <span *ngIf="card.pricerating == 3"> $ 51 and over</span>
-            </span>
-          </div>
-          <div>
-            <span>{{card.room_set.privateroom}} Private Rooms</span>
-            <span> | {{card.room_set.semiprivate}} Semi-Private </span>
+            <div *ngIf="card.cuisine1 != null">
+              <span>{{card.cuisine1}}</span>
+              <span *ngIf="card.cuisine2 != null"> | {{ card.cuisine2 }}</span>
+            </div>
+            <div>
+              <span *ngIf="card.experientialtype != null">{{ card.experientialtype }} | </span>
+              <span>
+                <span *ngIf="card.pricerating == 1">$ 30 and under</span>
+                <span *ngIf="card.pricerating == 2">$ 31 to $ 50</span>
+                <span *ngIf="card.pricerating == 3"> $ 51 and over</span>
+              </span>
+            </div>
+            <div>
+              <span>{{card.room_set.privateroom}} Private Rooms</span>
+              <span> | {{card.room_set.semiprivate}} Semi-Private </span>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </div>
