--- a/src/app/suitsandtablesadmin/suitsclientusers/suitsclientusers.component.html
+++ b/src/app/suitsandtablesadmin/suitsclientusers/suitsclientusers.component.html
@@ -37,7 +37,9 @@
     <th>
       Phone Number
     </th>
+    <th>
 
+    </th>
   </tr>
   <tr *ngFor="let client of clientobjects; let i =index">
     <td>
@@ -57,6 +59,16 @@
     </td>
     <td>
       {{client.phone}}
+    </td>
+    <td *ngIf="deleteindex === i">
+      <!-- placeholder space to keep line up-->
+    </td>
+    <td *ngIf="deleteindex !== i">
+      <button (click)="deleteconfrimtoggle(i)"  class="btn-danger">Delete</button>
+    </td>
+    <td *ngIf="deleteindex === i">
+      <button (click)="deleteconfrimtoggle(i)" class="STButton">Cancel</button>
+      <button (click)="deleteuser(i)" class="btn-danger">Delete</button>
     </td>
   </tr>
 
