--- a/src/app/mainroot/browsevenues/venuelist/venuelist.component.html
+++ b/src/app/mainroot/browsevenues/venuelist/venuelist.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div *ngIf="filteredvenues.length < 1" class="row">
+  <div *ngIf="venuelist.length < 1" class="row">
     <div class="col-12">
       <div class="text-center">
         <h3>Oops, looks like you're a little too refined for us, maybe scale it back while we grow. </h3>
