--- a/src/app/venueadmin/parentadminview/venueadminpage/venueadminpage.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminpage/venueadminpage.component.html
@@ -36,13 +36,13 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Venue Sign Up Request  <span style="color: red"> &nbsp; * Mandatory Fields</span></h5>
+        <h3 class="modal-title" id="exampleModalLabel">Venue Sign Up Request</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div *ngIf="signupcompelete" class="modal-body">
-        <h3>Your Venue application has been received we will be in touch</h3>
+        <h4>Your venue application has been received. We will get back to you shortly.</h4>
       </div>
       <div *ngIf="!signupcompelete" class="modal-body">
         <form (ngSubmit)="addvenue(createvenueform)" #createvenueform="ngForm">
