--- a/src/app/mainroot/clientadmin/clientprofile/clientprofile.component.scss
+++ b/src/app/mainroot/clientadmin/clientprofile/clientprofile.component.scss
@@ -15,9 +15,15 @@ input{
   width: 200px;
 }
 .profileimage{
-  height: 160px;
-  max-height: 160px;
+  height: 290px;
+  max-height: 290px;
   background-size: cover;
+}
+
+.editbutton{
+  position: relative;
+  top: 6vh;
+
 }
 
 #namespan{
@@ -37,7 +43,10 @@ input{
 }
 
 .clientinfo{
-  /*margin-top: 40px;*/
+  border-left: solid black 2px;
+  position: relative;
+  height: 44vh;
+  top: 6vh;
 }
 
 input#clientnameinput{
