--- a/src/app/suitsandtablesadmin/suitsvenueonboarding/suitsvenueonboarding.component.html
+++ b/src/app/suitsandtablesadmin/suitsvenueonboarding/suitsvenueonboarding.component.html
@@ -11,6 +11,7 @@
       <thead>
       <tr>
         <th>User</th>
+        <th>Email</th>
         <th></th>
         <th></th>
       </tr>
@@ -18,6 +19,7 @@
       <tbody>
       <tr *ngFor="let user of users; let i = index">
         <td *ngIf="linkshow !== i">{{user.name}}</td>
+        <td *ngIf="linkshow !== i">{{user.email}}</td>
         <td *ngIf="linkshow === i">https://www.suitsandtables.com/onboard/{{user.onboardstring}}</td>
         <td *ngIf="linkshow !== i"><button class="btn btn-outline-primary" (click)="showlink(i)">Show Link</button></td>
         <td *ngIf="linkshow === i"><button class="btn btn-outline-primary" (click)="emailsent(i)">Email Sent</button></td>
