--- a/src/app/mainroot/venueonboarding/venueonboarding.component.html
+++ b/src/app/mainroot/venueonboarding/venueonboarding.component.html
@@ -65,17 +65,10 @@
   <div class="row">
     <div class="col-12">
       <div class="text-center">
-        <h2>Your password has been set!</h2>
+        <h2>Your password has been set! We are routing you to the home page. Welcome back to Suits + Tables!</h2>
       </div>
     </div>
   </div>
   <br>
   <br>
-  <div class="row">
-    <div class="col-12">
-      <div class="text-center">
-        <button (click)="navtohome()" class="btn btn-outline-primary">To Home Page</button>
-      </div>
-    </div>
-  </div>
 </div>
