--- a/src/app/suitsandtablesadmin/suitsvenueonboarding/suitsvenueonboarding.component.html
+++ b/src/app/suitsandtablesadmin/suitsvenueonboarding/suitsvenueonboarding.component.html
@@ -34,5 +34,10 @@
         <h1>Congrats you did it!</h1>
       </div>
     </div>
+    <br>
+    <br>
+    <div class="col-12">
+      <iframe width="1280" height="720" src="https://www.youtube.com/embed/FavUpD_IjVY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
