--- a/src/app/mainroot/venuepage/venuepage.component.html
+++ b/src/app/mainroot/venuepage/venuepage.component.html
@@ -93,12 +93,13 @@
       <a *ngFor="let menu of venue.venuesamplemenu_set" [href]="menu.menupdfuri" target="_blank" class="span-style__mid link-style">{{menu.name}}</a>
     </span>
   </div>
-
+  <!--
   <div id="foodcarousel" class="Section center slider">
-    <div *ngFor="let item of foodpics">
-      <img [src]="item.image">
+    <div *ngFor="let image of cuisineimage_set">
+      <img [src]="image.imageurl">
     </div>
   </div>
+  -->
 
   <div class="Section" id="VenueMap">
     <iframe width="100%" height="450" frameborder="0" style="border:0" [src]='sanitizer.bypassSecurityTrustResourceUrl(mapsurl)'
