--- a/src/app/mainroot/venuepage/venuepage.component.html
+++ b/src/app/mainroot/venuepage/venuepage.component.html
@@ -93,13 +93,20 @@
       <a *ngFor="let menu of venue.venuesamplemenu_set" [href]="menu.menupdfuri" target="_blank" class="span-style__mid link-style">{{menu.name}}</a>
     </span>
   </div>
-  <!--
-  <div id="foodcarousel" class="Section center slider">
-    <div *ngFor="let image of cuisineimage_set">
-      <img [src]="image.imageurl">
-    </div>
+
+  <div *ngIf="venue.cuisineimage_set.length > 2" id="foodcarousel" class="Section">
+    <span class="SecHead span-style__lg">
+      Cuisine Images
+    </span>
+    <ngx-slick-carousel class="carousel"
+                        #slickModal="slick-carousel"
+                        [config]="slideConfig">
+      <div ngxSlickItem *ngFor="let slide of venue.cuisineimage_set" [ngStyle]="{'background-image': 'url(' + slide.imageurl + ')'}" class="slide cuisineimage">
+
+      </div>
+    </ngx-slick-carousel>
+
   </div>
-  -->
 
   <div class="Section" id="VenueMap">
     <iframe width="100%" height="450" frameborder="0" style="border:0" [src]='sanitizer.bypassSecurityTrustResourceUrl(mapsurl)'
