--- a/src/app/mainroot/venuepage/venuepage.component.scss
+++ b/src/app/mainroot/venuepage/venuepage.component.scss
@@ -158,3 +158,14 @@ td{
 #createsavedmodal{
   width: 75vh !important;
 }
+
+.cuisineimage{
+  min-height: 250px;
+  max-height: 250px;
+  background-size: cover;
+  margin: .5vw;
+}
+
+.slick-prev, .slick-next {
+  background-color: lightgray;
+}
