browse venues respects ordering

--- a/src/app/mainroot/browsevenues/venuelist/venuelist.component.html
+++ b/src/app/mainroot/browsevenues/venuelist/venuelist.component.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div *ngIf="!choicesload" class="row pb-3" id="VenueList">
-    <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let card of venuelist; let i= index">
+    <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let card of userablelist; let i= index">
       <div class="card-container">
         <slideshow class="card-container-img"
                    [showArrows]="true"
