--- a/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
+++ b/src/app/mainroot/browsevenues/browsevenuesroot/browsevenuesroot.component.html
@@ -80,21 +80,21 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div *ngIf="!nosearch" class="container">
   <form (ngSubmit)="searchvenue()" #searchform="ngForm">
-  <div class="row">
-    <div class="col-lg-7 col-md-6 col-sm-6 col-xs-6">
-        <input type="text"
-               placeholder="Search By Venue Name"
-               id="searchinput"
-               name="searchinput"
-               ngModel
-               class=" form-control input-gray">
+    <div class="row">
+      <div class="col-lg-7 col-md-6 col-sm-6 col-xs-6">
+          <input type="text"
+                 placeholder="Search By Venue Name"
+                 id="searchinput"
+                 name="searchinput"
+                 ngModel
+                 class=" form-control input-gray">
+      </div>
+      <div class="col-lg-2 col-md-3 col-sm-3 col-xs-3">
+          <button id="searchbutton" type="submit" class=" btn btn-light-blue">Search</button>
+      </div>
     </div>
-    <div class="col-lg-2 col-md-3 col-sm-3 col-xs-3">
-        <button id="searchbutton" type="submit" class=" btn btn-light-blue">Search</button>
-    </div>
-  </div>
   </form>
 </div>
 
