--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -396,9 +396,8 @@
             <select class="form-control"
                     id="endtime"
                     name="endtime"
-                    required
                     [ngModel]="savedevent.endtime">
-              <option value="" disabled selected>Select End Time *</option>
+              <option value="" disabled selected>Select End Time</option>
               <option value="8:00 AM">8:00 AM</option>
               <option value="8:15 AM">8:15 AM</option>
               <option value="8:30 AM">8:30 AM</option>
