--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -69,7 +69,7 @@
 <div id="venu-signup-pane">
   <div class="signup-container">
     <div class="col-12 title">Are you a Venue?</div>
-    <div class="col-12 sub-info">Looking to partner with Suits + Tables? Complete our simple, sign up form and a representative from Suits + Tables will reach out to you to discuss listing your venue on the platform. If you have additional questions, please check our our partner details <a routerLink="/partner" class="link-style" style="color: #00b3ee; text-decoration: underline;">click here</a>.</div>
+    <div class="col-12 sub-info">Looking to partner with Suits + Tables? Complete our simple, sign up form and a representative from Suits + Tables will reach out to you to discuss listing your venue on the platform.</div>
     <div class="col-12 btn-container d-flex justify-content-center"><a href="#" data-toggle="modal" data-target="#Venue-SignUp" class="button">Sign Up</a></div>
   </div>
 </div>
