--- a/src/app/mainroot/roompage/roompage.component.html
+++ b/src/app/mainroot/roompage/roompage.component.html
@@ -182,6 +182,9 @@
     <div class="row" *ngIf="!fullbuyoutroomactive && venue.fullbuyoutonline">
       <div class="col-sm-12 col-md-6 col-lg-4 pb-4">
         <div class="card-container">
+          <div (click)="navigatetofullbuyout()" class="clickoverlay">
+            <!-- overlay div for a clickable slide show frame -->
+          </div>
           <div class="card-container-img">
             <slideshow
               [showArrows]="true"
@@ -206,8 +209,11 @@
     </div>
 
     <div class="row" *ngIf = "venue.room_set.length > 0">
-      <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let r of otherrooms">
+      <div class="col-sm-12 col-md-6 col-lg-4 pb-4" *ngFor="let r of otherrooms; let i = index">
         <div class="card-container">
+          <div (click)="navigatetoroom(i)" class="clickoverlay">
+            <!-- overlay div for a clickable slide show frame -->
+          </div>
           <div class="card-container-img">
             <slideshow
               [showArrows]="true"
