--- a/src/app/mainroot/roompage/roompage.component.scss
+++ b/src/app/mainroot/roompage/roompage.component.scss
@@ -132,3 +132,13 @@ $color-primary: rgb(83,139,197);
   border-color: #00b3ee;
   color: #00b3ee;
 }
+
+.clickoverlay{
+  position: absolute;
+  z-index: 1;
+  cursor: pointer;
+  margin-left: 3.5vw;
+  margin-right: 3.5vw;
+  height: 35vh;
+  width: 20vw;
+}
